--- a/game/styles.css
+++ b/game/styles.css
@@ -31,6 +31,9 @@ canvas {
   display: block;
   background-color: white;
   border: 1px solid #000;
+  background-image: url("assets/background.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .button-container {
