--- a/game/styles.css
+++ b/game/styles.css
@@ -18,6 +18,12 @@ body {
   background-position: center;
 }
 
+#gameAndPowerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #gameContainer {
   position: relative;
   --aspect-ratio: 0.7071; /* 1 / 1.4142 - the ratio of a standard piece of A4 lined notebook paper */
@@ -36,9 +42,26 @@ canvas {
   height: 100%;
   display: block;
   border: 1px solid #000;
-  background-image: url("assets/background.jpg");
+  background-image: url("assets/paper.jpg");
   background-size: cover;
   background-position: center;
+}
+
+#powerMeterContainer {
+  display: flex;
+  align-items: flex-end;
+  width: 50px;
+  height: 60vh;
+  border: 2px solid #000;
+  margin-left: 20px;
+  position: relative;
+}
+
+#powerMeterFill {
+  width: 100%;
+  background-color: red;
+  height: 0%;
+  transition: height 0.1s ease;
 }
 
 .button-container {
