--- a/game/styles.css
+++ b/game/styles.css
@@ -35,16 +35,20 @@ body {
   align-items: center;
   border: 2px solid #000;
   margin: 20px;
-}
-
-canvas {
-  width: 100%;
-  height: 100%;
-  display: block;
-  border: 1px solid #000;
   background-image: url("assets/paper.jpg");
   background-size: cover;
   background-position: center;
+}
+
+/* This makes both canvases stack on top of each other */
+#drawCanvas,
+#physicsCanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  border: 1px solid #000;
+  background-color: transparent; /* Ensure the background is transparent */
 }
 
 #powerMeterContainer {
