--- a/game/styles.css
+++ b/game/styles.css
@@ -87,8 +87,9 @@ body {
 
 .button {
   font-family: "DeskScratch";
-  font-size: 1rem;
-  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+  -webkit-text-stroke: 0.005rem rgba(200, 200, 200, 0.9);
+  padding: 0.5rem 0.5rem;
   background-color: rgba(15, 15, 15, 0);
   border: none;
   border-radius: 0.5rem;
