added fixed constaint to tanks when they are at rest so they may not be pushed around by other tanks

--- a/game/styles.css
+++ b/game/styles.css
@@ -92,13 +92,36 @@ body {
   padding: 0.5rem 0.5rem;
   background-color: rgba(15, 15, 15, 0);
   border: none;
+  margin: 0 0.5 rem;
   border-radius: 0.5rem;
   cursor: pointer;
   transition: transform 0.1s, box-shadow 0.1s;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  border-bottom-right-radius: 225px 15px;
+  border-bottom-left-radius: 15px 255px;
 }
 
 .button:hover {
   background-color: rgba(15, 15, 15, 0.2);
+}
+button.lined.thick {
+  border: solid 3px #41403e;
+}
+button.dotted.thick {
+  border: dotted 3px #41403e;
+}
+button.dashed.thick {
+  border: dashed 3px #41403e;
+}
+button.lined.thin {
+  border: solid 2px #41403e;
+}
+button.dotted.thin {
+  border: dotted 2px #41403e;
+}
+button.dashed.thin {
+  border: dashed 2px #41403e;
 }
 
 .button:active {
